--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,26 @@ node_modules/
 build/
 dist/
 
+# Python artifacts
+__pycache__/
+*.py[cod]
+.venv/
+venv/
+env/
+.mypy_cache/
+.pytest_cache/
+*.egg-info/
+pip-wheel-metadata/
+
+# General logs
+logs/
+*.log
+
+# Generated configuration files
+config/*.local.json
+config/*.dev.json
+config/*.generated.json
+
 # Logs
 npm-debug.log*
 yarn-debug.log*
