--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "build": "tsc",
     "start": "node dist/server.js",
+    "dev": "ts-node src/server.ts",
     "test": "jest"
   },
   "dependencies": {
